--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "html-entities": "^1.2.1",
+    "is-base64": "^1.0.0",
     "morgan": "^1.9.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
